<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bus Scheduler</string>
    <string name="OnWeekend">По выходным</string>
    <string name="OnWorkDays">По будням</string>
    <string name="Now">Ближайшие</string>
    <string name="East">На восток</string>
    <string name="West">На запад</string>
    <string name="South">На юг</string>
    <string name="North">На север</string>
    <string name="ToCenter">В центр</string>
    <string name="ToSuburbs">Из центра</string>
    <string name="SearchActivity.Title">Поиск</string>
    <string name="Menu.Favorites">Избранное</string>
    <string name="Menu.Search">Поиск</string>
    <string name="Menu.Preferences">Настройки</string>
    <string name="LocateButton">Текущее расположение</string>
    <string name="DisclaimerLink">
    <u>Этим вашим расписаниям вообще можно доверять?</u>
    </string>
    <string name="DisclaimerCaption">Статус информации</string>
    <string name="DisclaimerText">Разработчики приложения, также как и сервисы, которые предоставляют нам данные, не
        несут ответственности за их соответствие действительности. В частности, расписания движения не являются и не
        могут являться официальными документами. Мы не несём ответственности за возможное несоответствие фактического
        времени прибытия транспорта с данными полученных расписаний.\n\nОднако, практика показывает, что расписаниями
        можно пользоваться при понимании
        некоторых вещей.\n\nВо-первых, расписание соблюдается тем хуже, чем сложнее дорожная ситуация. В
        частности, в вечернее время (после 23 часов) расписание, как правило, соблюдается неплохо. Однако, следует иметь
        в виду, что пустые вечерние дороги иногда способствуют тому, что транспорт начинает опережать свой график. Таким
        образом, чем дальше остановка от начала маршрута, тем больше вероятность, что транспорт проследует через неё на
        несколько минут раньше.\nВо-вторых, расписание соблюдается тем лучше, чем больше ожидаемый пассажиропоток.
        Так, например, последние рейсы от станций метро, развозящие значительное число пассажиров, почти всегда
        отправляются либо точно по расписанию, либо даже на несколько минут позже.
    </string>
</resources>
