<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Белорусский вокзал"
            android:textSize="20sp"
            />
    <RadioGroup
            android:id="@+id/radioGroupDirection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/optDirection1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_button_selector"
                android:button="@null"
                android:checked="true"
                android:text="@string/ToSuburbs"
                android:layout_weight="1"
                android:gravity="center"
                />
        <RadioButton
                android:id="@+id/optDirection2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_button_selector"
                android:button="@null"
                android:text="@string/ToCenter"
                android:layout_weight="1"
                android:gravity="center" />
    </RadioGroup>
    <View
            android:layout_width="1dp"
            android:layout_height="10dp">
    </View>
    <RadioGroup
            android:id="@+id/radioGroupTimetableMode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/optNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_button_selector"
                android:button="@null"
                android:checked="true"
                android:text="@string/Now"
                android:layout_weight="1"
                android:gravity="center"
                />
        <RadioButton
                android:id="@+id/optOnWorkDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_button_selector"
                android:button="@null"
                android:text="@string/OnWorkDays"
                android:layout_weight="1"
                android:gravity="center" />
        <RadioButton
                android:id="@+id/optOnWeekend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/toggle_button_selector"
                android:button="@null"
                android:text="@string/OnWeekend"
                android:layout_weight="1"
                android:gravity="center" />
    </RadioGroup>
    <ListView
            android:id="@+id/lstStopSchedule"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    </ListView>
    <TextView
            android:id="@+id/disclaimerLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/DisclaimerLink"
            android:autoLink="web"
            android:textSize="12sp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:textColor="@color/link"
            />
    <include android:id="@+id/menu"
             layout="@layout/menu"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
</LinearLayout>